# dictosaurus

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: hf-catalog.json
apps/desktop/src-tauri/src/: audio.rs  commands.rs  dictation.rs  dictionary.rs  hf_catalog.rs  hotkey.rs  lib.rs  main.rs  models.rs  overlay.rs  paste.rs  settings.rs  transcribe.rs  tray.rs
apps/desktop/src/i18n/: i18n.ts
apps/desktop/src/lib/: ipc.test.ts  ipc.ts
apps/desktop/src/locales/en/: common.json
apps/desktop/src/locales/ru/: common.json
apps/desktop/src/overlay/: Mascot.module.css  Mascot.tsx  Overlay.module.css  Overlay.tsx
apps/desktop/src/settings/: DictionarySection.module.css  DictionarySection.test.tsx  DictionarySection.tsx  HotkeyRecorder.tsx  OnboardingView.module.css  OnboardingView.tsx  SettingsShell.tsx  SettingsView.module.css  SettingsView.tsx  settingsChrome.module.css
apps/desktop/src/test/: setup.ts
docs/superpowers/plans/: 2026-07-16-native-macos-ui-ux.md
docs/superpowers/specs/: 2026-07-16-native-macos-ui-ux-design.md
