[package]
name = "dictosaurus"
version = "0.1.0"
description = "Local AI dictation for desktop"
authors = ["Anton Liubushkin"]
edition = "2021"
# The package has a second bin (`hf_snapshot`); keep plain `cargo run` working.
default-run = "dictosaurus"

[lib]
name = "dictosaurus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
once_cell = "1"
cpal = "0.18"
whisper-rs = "0.16"
sherpa-onnx = "1.13"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-macos-permissions = "2"
core-graphics = "0.25"

# whisper.cpp inference is far too slow in unoptimized builds.
[profile.dev]
opt-level = 2
